# cookiecutter-pycli

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/console/: run.py
